--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ margin-right: auto;
 
 
 /* ==================Sections============== */
-.card-itm {
+.card-item {
     text-align: center;
     
 }
